--- a/.github/workflows/react-deploy.yml
+++ b/.github/workflows/react-deploy.yml
@@ -15,12 +15,15 @@ jobs:
 
     - name: Setup node.js environement
       uses : actions/setup-node@v3
+        with:
+          cache: 'npm'
 
     - name: npm install + npm test + npm build
       run:
         nmp install
-        npm test
         nmp run build 
+        npm test
+
     
     - name: S3 sync
       uses: jakejarvis/s3-sync-action@master
