fix Github action nodejs setup 3

--- a/.github/workflows/react-deploy.yml
+++ b/.github/workflows/react-deploy.yml
@@ -19,7 +19,7 @@ jobs:
         cache: 'npm'
 
     - name: npm install + npm test + npm build
-      run:
+      run: |
         nmp install
         nmp run build 
         npm test
