fix Github action nodejs setup 5

--- a/.github/workflows/react-deploy.yml
+++ b/.github/workflows/react-deploy.yml
@@ -21,6 +21,11 @@ jobs:
 
     - name: npm install + npm test + npm build
       run: |
+        export NVM_DIR="$HOME/.nvm"
+        [ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh"
+        nvm install --lts
+        node -v
+        npm -v
         nmp install
         nmp run build 
         npm test
